# my_parser

./: README.md  additionalFmts.py  api.py  extract_payer_payee.py  pyproject.toml  routines.py  script.py  util.py
directdebit/: directdeb.py
key_engine/: canonical_keys.json  key_detector.py
parsers/ach/: ach_parser.py  keys.py
parsers/all/: all_parser.py  keys.py
parsers/avidpay/: avidp_check_parser.py  avidp_gen_parser.py
parsers/directdebit/: directdeb.py
parsers/disbursement/: disb_parser.py
parsers/fundsTransfer/: fundsTrans_parser.py
parsers/merchref/: merch_ref_parser.py
parsers/misc/: cardp.py  invo.py  webt.py
parsers/paypal/: paypal.py
parsers/processor_eft/: peft.py
parsers/remittance/: remi.py
parsers/spanish_types/: pattern1.py  pattern10.py  pattern11.py  pattern12.py  pattern2.py  pattern3.py  pattern4.py  pattern5.py  pattern6.py  pattern7.py  pattern8.py  pattern9.py  spanish.py
parsers/swift/: keys.py  swift_parser.py
parsers/vendorpay/: vp_parser.py
parsers/vendorpymt/: vpymt_parser.py
parsers/wire/: keys.py  wire_parser.py
processor_eft/: peft.py
vendorpymt/: vpymt_parser.py
